kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securebox
  labels:
    name: securebox
    environment: production
